top spacing error resolved

--- a/src/components/client/DASHBOARD.css
+++ b/src/components/client/DASHBOARD.css
@@ -102,6 +102,8 @@
   background-color: #ffffff;
   color: #ffffff;
   border: none;
+  padding-top: 0px;
+  margin-top: 0px;
 }
 
 .ddbtn {
